--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --files server.ts index.d.ts",
     "start": "node server.js",
-    "dev-build": "tsc && cp ./package.json ./dist"
+    "build": "rimraf dist && tsc"
   },
   "keywords": [],
   "author": "",
@@ -19,20 +19,18 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.14.1",
-    "nodemailer": "^7.0.2",
-    "otplib": "^12.0.1",
-    "qrcode": "^1.5.4",
+    "mongoose": "^8.14.2",
+    "nodemailer": "^7.0.3",
+    "rimraf": "^6.0.1",
     "zod": "^3.24.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.8",
-    "@types/cors": "^2.8.17",
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.1",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/nodemailer": "^6.4.17",
-    "@types/qrcode": "^1.5.5",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.3"
   }
