modified: Configured caddy service for production

--- a/docker-compose.caddy.yml
+++ b/docker-compose.caddy.yml
@@ -1,11 +1,14 @@
 services:
   caddy:
-    image: caddy:2-alpine
+    build:
+      context: ./caddy
+      dockerfile: Dockerfile
     ports:
       - 80:80
       - 443:443
+    environment:
+      DOMAIN_NAME: ${DOMAIN_NAME}
     volumes:
-      - ./caddy/Caddyfile:/etc/caddy/Caddyfile
       - caddy_data:/data
       - caddy_config:/config
     networks:
