--- a/docker-compose.frontend.yml
+++ b/docker-compose.frontend.yml
@@ -2,15 +2,12 @@ services:
   frontend:
     build:
       context: ./frontend
-      dockerfile: Dockerfile
+      target: production
+      args:
+        VITE_API_URL: https://api.${DOMAIN_NAME}
     restart: unless-stopped
-    env_file: ./frontend/.env
-    volumes:
-      - ./frontend:/app
-      - /app/node_modules
     networks:
       - docker-mern
-    command: npm run dev -- --host
     environment:
       - CHOKIDAR_USEPOLLING=true # Windows exclusive
     depends_on:
