fix: small fix for development

--- a/docker-compose.mongo.yml
+++ b/docker-compose.mongo.yml
@@ -4,6 +4,6 @@ services:
     ports:
       - 27017:27017
     volumes:
-      - mongo_data:/data/db # mongo_data - named volume by Docker
+      - mongo_data:/data/db
     networks:
       - docker-mern
