--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.2",
     "nodemailer": "^7.0.3",
+    "resend": "^4.5.1",
     "rimraf": "^6.0.1",
     "zod": "^3.24.4"
   },
